プルリク時に修正

--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -1,8 +1,11 @@
 name: Rails CI/CD
 
 on:
-  push:
-    branches: [main]
+  pull_request:
+    branches:
+      - main
+    types:
+      - closed
 
 jobs:
   build:
