--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -3,7 +3,7 @@ name: Rails CI/CD
 on:
   pull_request:
     branches:
-      - new_develop
+      - newdevelop
     types:
       - closed
 
@@ -20,7 +20,7 @@ jobs:
       run: |
         echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
         ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 'cd Totono-ru &&
-        git pull origin new_develop &&
+        git pull origin newdevelop &&
         ~/.rbenv/shims/bundle install &&
         ~/.rbenv/shims/bundle exec rails assets:precompile RAILS_ENV=production &&
         ~/.rbenv/shims/bundle exec rails db:migrate RAILS_ENV=production &&
